# Toy_compiler

./: .gitignore  CMakeLists.txt  README.md  ast.cpp  ast.h  main.cpp  parser.y  spl  spl.ll  tree.html  types.cuh  vis.json
executable/: toy_compiler
include/: FlexLexer.h
report/: 编译原理实验报告.md
report/编译原理实验报告.assets/: 编译原理实验报告(1).md
src/: CodeGenerator.cpp  CodeGenerator.h  IR.cpp  IR.h  SPL_Define.h  ast.cc  ast.cpp  ast.h  driver.cpp  driver.h  lex.l  lex.yy.cc  location.hh  parser.tab.cc  parser.tab.hh  parser.y  scanner.h  semantic.cpp  semantic.h  symtab.cpp  symtab.h  tt.h  types.cuh
tests/: Array.spl  BuildInTypeTest.spl  Comprehensive1.spl  ComputeTest.spl  Function.spl  GotoTest.spl  LoopTest.spl  Optimize.spl  Record.spl  RecursiveFunction.spl  SysCall.spl  test1.spl  test2.spl  test3.spl  test4.spl  test7.spl
